8275735: [linux] Remove deprecated Metrics api (kernel memory limit)
Reviewed-by: sgehwolf
Backport-of: 6dbd5a68c7c1e8f433c3e1c9a0e0746f8d9d730f